Fixed after review

--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
         </ul>
       </nav>
       <h1 class="header__title brand-title">no focus</h1>
-      <p class="header__subtitle title-decor">
-        Что делать, когда не можешь делать ничего<br />Или почему нам так сложно
-        сконцентрироваться, особенно когда очень надо
-      </p>
+      <div class="header__subtitle title-decor">
+        <p>Что делать, когда не можешь делать ничего</p>
+        <p>
+          Или почему нам так сложно сконцентрироваться, особенно когда очень
+          надо
+        </p>
+      </div>
     </header>
     <main class="content">
       <section class="section reasons">
@@ -157,15 +160,15 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <p class="section__subtitle title-decor">
+        <h3 class="section__subtitle title-decor">
           5 простых (на самом деле не очень) советов
-        </p>
+        </h3>
         <ul class="cards-list">
           <li>
             <article class="card">
-              <h3 class="card__title card__title_type_thin title-decor">
+              <h4 class="card__title card__title_type_thin title-decor">
                 Представьте небо и облака
-              </h3>
+              </h4>
               <p class="card__text">
                 Или листья в ручье. Тут дело в лёгкой медитации, которая
                 помогает успокоиться. Ведь часто именно тревожные мысли о
@@ -180,9 +183,9 @@
           </li>
           <li>
             <article class="card">
-              <h3 class="card__title card__title_type_thin title-decor">
+              <h4 class="card__title card__title_type_thin title-decor">
                 Включите музыку
-              </h3>
+              </h4>
               <p class="card__text">
                 Но не любую, и не любимую. Любимая может быть связана с сильными
                 положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -193,9 +196,9 @@
           </li>
           <li>
             <article class="card">
-              <h3 class="card__title card__title_type_thin title-decor">
+              <h4 class="card__title card__title_type_thin title-decor">
                 Прогуляйтесь
-              </h3>
+              </h4>
               <p class="card__text">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
                 <a
@@ -214,9 +217,9 @@
           </li>
           <li>
             <article class="card">
-              <h3 class="card__title card__title_type_thin title-decor">
+              <h4 class="card__title card__title_type_thin title-decor">
                 Хорошо ешьте
-              </h3>
+              </h4>
               <p class="card__text">
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                 которые препятствуют резким скачкам сахара в крови. Например, с
@@ -228,9 +231,9 @@
           </li>
           <li>
             <article class="card">
-              <h3 class="card__title card__title_type_thin title-decor">
+              <h4 class="card__title card__title_type_thin title-decor">
                 Читайте
-              </h3>
+              </h4>
               <p class="card__text">
                 Настоящие бумажные книги. Это правда помогает с концентрацией:
                 чтобы прочитать пост в соцсети, достаточно нескольких минут или
@@ -244,32 +247,32 @@
       <section class="gallery">
         <h2 class="gallery__title title-decor">А можно в картинках?</h2>
         <img
-          alt="Закат в горах"
-          class="gallery__image gallery__image_size_2x1"
+          alt="Солнце заходит за горы, в небе, в облаках, летит стая птиц"
+          class="gallery__image"
           loading="lazy"
           src="./images/sunset.png"
         />
         <img
-          alt="Мороженое"
-          class="gallery__image gallery__image_size_1x2"
+          alt="Мороженое в виде мультяшных персонажей с лицами в большой тарелке"
+          class="gallery__image"
           loading="lazy"
           src="./images/ice-cream.png"
         />
         <img
-          alt="Кассета"
-          class="gallery__image gallery__image_size_1x2"
+          alt="Аудиокассета, на заднем плане модальное окно для включения музыки"
+          class="gallery__image"
           loading="lazy"
           src="./images/tape.png"
         />
         <img
-          alt="Стопка книг"
+          alt="Стопка книг с чашкой чая на ней"
           class="gallery__image"
           loading="lazy"
           src="./images/books.png"
         />
         <img
-          alt="Улица в Японии"
-          class="gallery__image gallery__image_size_2x1"
+          alt="Улица с двухэтажными домами в Японии"
+          class="gallery__image"
           loading="lazy"
           src="./images/street.png"
         />
